# fred_hr

./: .env.example  .gitignore  pyproject.toml  requirements.txt
hooks/: runtime_mpl_tmpdir.py
src/fred_app/: __init__.py  api.py  charts.py  config.py  main.py  ui.py
src/fred_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
